--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@angular/animations": "^17.1.0",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
-    "@angular/core": "^17.1.0",
+    "@angular/core": "^17.1.1",
     "@angular/forms": "^17.1.0",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/platform-server": "^17.1.0",
-    "@angular/router": "^17.1.0",
+    "@angular/router": "^17.1.1",
     "@angular/ssr": "^17.1.1",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.2",
@@ -38,6 +38,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
